--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "ejs": "^3.1.5",
     "express": "^4.18.2",
     "mongoose": "^5.10.15",
